@@ -3,6 +3,9 @@ Changelog
 
 9.2-dev0 - (unreleased)
 ---------------------
+* Change: removed content p and li enlargement, this can be added in a theme
+  css if needed
+  [ichim-david refs #106884]
 
 9.1 - (2019-02-26)
 ---------------------
